fixed mobile spacing on project section

--- a/styles.css
+++ b/styles.css
@@ -477,7 +477,7 @@ p{
       align-items: center;
     }
     .project{
-      height: 1000px;
+      height: 1150px;
       width: 700px;
     }
     .project img{
